Update stationslist activity and add a new activity for organizations